# funcoin

./: .gitignore  README.md  RELEASE.md  setup.cfg
funcoin/: __init__.py  funcoin.py  funcoinHD.py  funcoin_auxiliary.py  preproc.py  spectral.py  temp_storage.py
notebooks/: Tutorial_funcoin.ipynb
