[metadata]
name = funcoin
version = 0.1.0
author = Janus R. L. Kobbersmed
author_email = janus@cfin.au.dk
description = 'Funcional Connectivity Integrative Normative Modelling (FUNCOIN)',
url='https://github.com/janusrlk/funcoin',
license = GNU General Public License v3 (GPLv3)
readme = "README.md",
classifiers =
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.6
install_requires = 
    numpy
    scikit-learn
    scipy
    matplotlib